Completed coding transformer

--- a/transformers/code_transformers.ipynb
+++ b/transformers/code_transformers.ipynb
@@ -5,12 +5,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Transformer Code Implementation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is to practice transformer code implementation. The reference for this [Mark Riedl Github repo](https://github.com/markriedl/transformer-walkthrough?utm_source=pocket_saves). This notebook is a replication for practice purpose."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Transformer Architecture](/Images/transformer.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import the library "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -576,9 +600,633 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 2.1 Decoder Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "emb_d = nn.Embedding(vocab, d_embed)\n",
+    "y = emb_d(y) * math.sqrt(d_embed)\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "pe = torch.zeros(max_len,d_embed, requires_grad = False)\n",
+    "position = torch.arange(0, max_len).unsqueeze(1)\n",
+    "divisor = torch.exp(torch.arange(0, d_embed, 2) * -(math.log(10000.0) / d_embed))\n",
+    "pe[:,0::2] = torch.sin(position * divisor)\n",
+    "pe[:,1::2] = torch.cos(position * divisor)\n",
+    "pe = pe.unsqueeze(0)\n",
+    "y = y + pe[:, :y.size(1)]\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Decoder Attention Layers "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.1 Self-attention sub-layer "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1.1 set aside residual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_residual = y.clone()\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1.2 Pre-self attention Layer Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = y.mean(-1, keepdim=True)\n",
+    "std = y.std(-1, keepdim=True)\n",
+    "W1_d = nn.Parameter(torch.ones(d_embed))\n",
+    "b1_d = nn.Parameter(torch.zeros(d_embed))\n",
+    "y = W1_d * (y - mean) / (std + epsilon) + b1_d\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1.3 Self-Attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q torch.Size([1, 8, 3, 64])\n",
+      "k torch.Size([1, 8, 3, 64])\n",
+      "v torch.Size([1, 8, 3, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = y\n",
+    "q = y\n",
+    "v = y\n",
+    "linear_q_self = nn.Linear(d_embed, d_embed)\n",
+    "linear_k_self = nn.Linear(d_embed, d_embed)\n",
+    "linear_v_self = nn.Linear(d_embed, d_embed)\n",
+    "d_k = d_embed // num_heads\n",
+    "q = linear_q_self(q)\n",
+    "k = linear_k_self(k)\n",
+    "v = linear_k_self(v)\n",
+    "q = q.view(num_batches, -1, num_heads, d_k).transpose(1,2)\n",
+    "k = k.view(num_batches, -1, num_heads, d_k).transpose(1,2)\n",
+    "v = v.view(num_batches, -1, num_heads, d_k).transpose(1,2)\n",
+    "print(\"q\",q.size())\n",
+    "print(\"k\",k.size())\n",
+    "print(\"v\",v.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "attention torch.Size([1, 8, 3, 3])\n",
+      "y torch.Size([1, 8, 3, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_k = q.size(-1)\n",
+    "scores = torch.matmul(k,q.transpose(-2,-1)) / math.sqrt(d_k)\n",
+    "scores = scores.masked_fill(y_mask == 0, -epsilon)\n",
+    "attn = F.softmax(scores, dim=-1)\n",
+    "print(\"attention\",attn.size())\n",
+    "y = torch.matmul(attn, v)\n",
+    "print(\"y\",y.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assemble heads\n",
+    "y = y.transpose(1,2).contiguous().view(num_batches,-1,num_heads * (d_embed // num_heads))\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1.4 Post-Self-Attention Feed Forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff_d1 = nn.Linear(d_embed, d_embed)\n",
+    "y = ff_d1(y)\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### 2.2.1.5 Add Residual back \n",
+    "y = y_residual + y\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.2 Source-Attention sub-layer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.2.1 Set residual aside"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_residual = y.clone()\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.2.2 Pre-Source-Attention Layer Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = y.mean(-1, keepdim = True)\n",
+    "std = y.std(-1, keepdim = True)\n",
+    "W2_d = nn.Parameter(torch.ones(d_embed))\n",
+    "b2_d = nn.Parameter(torch.ones(d_embed))\n",
+    "y = W2_d * (y - mean) / (std + epsilon) + b2_d\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.2.3 source Attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Source attention works just like self-attention, except we compute the scores using keys and values from the encoder and apply it to the query from the decoder. That is, based on what the encoder thinks we should attend to, what part of the decoder sequence should we actually attend to."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q torch.Size([1, 8, 3, 64])\n",
+      "k torch.Size([1, 8, 3, 64])\n",
+      "v torch.Size([1, 8, 3, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = y\n",
+    "k = x # we are using x\n",
+    "v = x # we are using x\n",
+    "linear_q_source = nn.Linear(d_embed,d_embed)\n",
+    "linear_k_source = nn.Linear(d_embed,d_embed)\n",
+    "linear_v_source = nn.Linear(d_embed,d_embed)\n",
+    "d_k = d_embed // num_heads\n",
+    "q = linear_q(q)\n",
+    "k = linear_k(k)\n",
+    "v = linear_v(v)\n",
+    "q = q.view(num_batches, -1, num_heads, d_k).transpose(1,2)\n",
+    "v = v.view(num_batches, -1, num_heads, d_k).transpose(1,2)\n",
+    "k = k.view(num_batches, -1, num_heads, d_k).transpose(1,2)\n",
+    "print(\"q\",q.size())\n",
+    "print(\"k\",k.size())\n",
+    "print(\"v\",v.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y torch.Size([1, 8, 3, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_k = q.size(-1)\n",
+    "scores = torch.matmul(k,q.transpose(-2,-1)) / math.sqrt(d_k)\n",
+    "attn = F.softmax(scores, dim=-1)\n",
+    "y = torch.matmul(attn,v)\n",
+    "print(\"y\",y.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assemble heads\n",
+    "y = y.transpose(1,2).contiguous().view(num_batches, -1, num_heads * (d_embed // num_heads))\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.2.4 POst-Source-Attention Feed Forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "ff_d2 = nn.Linear(d_embed,d_embed)\n",
+    "y = ff_d2(y)\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.2.5 Add residual back "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = y_residual + y\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.3 Feed Forward Sub-Layer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.3.1 set aside residual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_residual = y.clone()\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.3.2 Pre-Feed-Forward Layer Normalization "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = y.mean(-1, keepdim=True)\n",
+    "std = y.std(-1, keepdim=True)\n",
+    "W3_d = nn.Parameter(torch.ones(d_embed))\n",
+    "b3_d = nn.Parameter(torch.zeros(d_embed))\n",
+    "y = W3_d * (y - mean) / (std + epsilon) + b3_d\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.3.3 Feed Forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_expand_d = nn.Linear(d_embed, d_ff)\n",
+    "linear_compress_d = nn.Linear(d_ff, d_embed)\n",
+    "y = linear_compress_d(F.relu(linear_expand_d(y)))\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.3.4 Add residual back"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = y_residual + y\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Final Decoder layer Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = y.mean(-1, keepdim=True)\n",
+    "std = y.std(-1, keepdim=True)\n",
+    "Wn_d = nn.Parameter(torch.ones(d_embed))\n",
+    "bn_d = nn.Parameter(torch.zeros(d_embed))\n",
+    "y = Wn_d * (y - mean) / (std + epsilon) + bn_d\n",
+    "print(y.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Generate Probability Distribution "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This next module sits on top of the decoder and expands the decoder output into a log probability distribution over the vocabulary for each token position. This is done for all tokens, though the only ones that will matter for loss computation are the ones that are masked."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 50000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_scores = nn.Linear(d_embed, vocab)\n",
+    "probs = F.log_softmax(linear_scores(y), dim=-1)\n",
+    "print(probs.size())"
+   ]
   }
  ],
  "metadata": {
