added resnet block

--- a/computer_vision/cnn_architectures/dl_architectures.ipynb
+++ b/computer_vision/cnn_architectures/dl_architectures.ipynb
@@ -129,67 +129,117 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31mDocstring:\u001b[0m\n",
-      "cat(tensors, dim=0, *, out=None) -> Tensor\n",
-      "\n",
-      "Concatenates the given sequence of :attr:`seq` tensors in the given dimension.\n",
-      "All tensors must either have the same shape (except in the concatenating\n",
-      "dimension) or be empty.\n",
-      "\n",
-      ":func:`torch.cat` can be seen as an inverse operation for :func:`torch.split`\n",
-      "and :func:`torch.chunk`.\n",
-      "\n",
-      ":func:`torch.cat` can be best understood via examples.\n",
-      "\n",
-      "Args:\n",
-      "    tensors (sequence of Tensors): any python sequence of tensors of the same type.\n",
-      "        Non-empty tensors provided must have the same shape, except in the\n",
-      "        cat dimension.\n",
-      "    dim (int, optional): the dimension over which the tensors are concatenated\n",
-      "\n",
-      "Keyword args:\n",
-      "    out (Tensor, optional): the output tensor.\n",
-      "\n",
-      "Example::\n",
-      "\n",
-      "    >>> x = torch.randn(2, 3)\n",
-      "    >>> x\n",
-      "    tensor([[ 0.6580, -1.0969, -0.4614],\n",
-      "            [-0.1034, -0.5790,  0.1497]])\n",
-      "    >>> torch.cat((x, x, x), 0)\n",
-      "    tensor([[ 0.6580, -1.0969, -0.4614],\n",
-      "            [-0.1034, -0.5790,  0.1497],\n",
-      "            [ 0.6580, -1.0969, -0.4614],\n",
-      "            [-0.1034, -0.5790,  0.1497],\n",
-      "            [ 0.6580, -1.0969, -0.4614],\n",
-      "            [-0.1034, -0.5790,  0.1497]])\n",
-      "    >>> torch.cat((x, x, x), 1)\n",
-      "    tensor([[ 0.6580, -1.0969, -0.4614,  0.6580, -1.0969, -0.4614,  0.6580,\n",
-      "             -1.0969, -0.4614],\n",
-      "            [-0.1034, -0.5790,  0.1497, -0.1034, -0.5790,  0.1497, -0.1034,\n",
-      "             -0.5790,  0.1497]])\n",
-      "\u001b[0;31mType:\u001b[0m      builtin_function_or_method\n"
-     ]
-    }
-   ],
    "source": [
-    "??torch.cat"
+    "## ResNet"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* ResNet comes in many variants\n",
+    "* Here we look into two variants - The original ResNet and the Pre-Activation ResNet Block\n",
+    "* In original ResNet a non-linear activation is applied after the skip Connection\n",
+    "* In pre-activation ResNet a non-linear activation at the beggining of F. For deep networks, this has shown to perform better as gradient flow is guaranteed to have the indentity matrix and is not harmed by any non-linear activation applied to it\n",
+    "* We dimensions of x and f(x) should be same\n",
+    "* ![Two variants of ResNet](/Images/resnet_types.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Original ResNet Block "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ResNetBlock(nn.Module):\n",
+    "    def __init__(self,c_in,act_fn,subsample=False,c_out=-1):\n",
+    "        \"\"\"_summary_\n",
+    "            Inputs:\n",
+    "            c_in - Number of input features\n",
+    "            act_fn - Activation class constructor (e.g. nn.ReLU)\n",
+    "            subsample - If True, we want to apply a stride inside the block and reduce the output shape by 2 in height and width\n",
+    "            c_out - Number of output features. Note that this is only relevant if subsample is True, as otherwise, c_out = c_in\n",
+    "        \"\"\" \n",
+    "        super().__init__()\n",
+    "        if not subsample:\n",
+    "            c_out = c_in\n",
+    "\n",
+    "        # Network F\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Conv2d(c_in,c_out,kernel_size=3,padding=1,stride=1 if not subsample else 2, bias=False), # No bias needed as the Batch Norm handles it\n",
+    "            nn.BatchNorm2d(c_out),\n",
+    "            act_fn(),\n",
+    "            nn.conv2d(c_out,c_out,kernel_size=3,padding=1, bias=False),\n",
+    "            nn.BatchNorm2D(c_out)       \n",
+    "        )\n",
+    "\n",
+    "        # 1x1 convolution with stride 2 means we take the upper left value, and transform it to new output size\n",
+    "        self.downsample = nn.Conv2d(c_in, c_out, kernel_size=1, stride=2) if subsample else None\n",
+    "\n",
+    "        def foward(self, x):\n",
+    "            z = self.net(x)\n",
+    "            if self.downsample is not None:\n",
+    "                x = self.downsample(x)\n",
+    "            out = z + x\n",
+    "            out = self.act_fn(out)\n",
+    "            return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PreActResNetBlock(nn.Module):\n",
+    "    def __init__(self, c_in, act_fn, subsample=False, c_out=-1):\n",
+    "        \"\"\"_summary_\n",
+    "        Inputs:\n",
+    "            c_in - Number of input features\n",
+    "            act_fn - Activation class constructor (e.g. nn.ReLU)\n",
+    "            subsample - If True, we want to apply a stride inside the block and reduce the output shape by 2 in height and width\n",
+    "            c_out - Number of output features. Note that this is only relevant if subsample is True, as otherwise, c_out = c_in\n",
+    "        \"\"\"\n",
+    "\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        if not subsample:\n",
+    "            c_out = c_in\n",
+    "\n",
+    "        # Network F\n",
+    "        self.Net = nn.Sequential(\n",
+    "            nn.BatchNorm2d(c_in),\n",
+    "            act_fn(),\n",
+    "            nn.Conv2d(c_in, c_out, kernel_size=3, padding=1, stride=1 if not subsample else 2, bias=False),\n",
+    "            nn.BatchNorm2d(c_out),\n",
+    "            act_fn(),\n",
+    "            nn.Conv2D(c_out, c_out, kernel_size=3, padding=1, bias=False)\n",
+    "        )\n",
+    "\n",
+    "        self.downsample = nn.Sequential(\n",
+    "            nn.BatchNorm2d(c_in),\n",
+    "            act_fn(),\n",
+    "            nn.Conv2d(c_in, c_out, kernel_size=1, stride=2, bias=False)\n",
+    "        ) if subsample else None\n",
+    "\n",
+    "        def forward(self, x):\n",
+    "            z = self.Net(x)\n",
+    "            if self.downsample is not None:\n",
+    "                x = self.downsample(x)\n",
+    "            out = z+x\n",
+    "            return out    "
+   ]
   }
  ],
  "metadata": {
