updated handling json

--- a/python/json/01_handling_json.ipynb
+++ b/python/json/01_handling_json.ipynb
@@ -12,6 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* [Elements of JSON format](https://www.json.org/json-en.html)\n",
     "* Python supports JSON natively. It comes with built-in packages for encoding and decoding JSON data\n",
     "* The process of encoding JSON is called serialization - for storing or transmitting across a network\n",
     "* Deserialization is the process of decoding data\n",
